--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="GJU Course" />
+    <meta property="og:description" content="Find and review GJU courses" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
