--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:type" content="website" />
+    <meta property="og:title" content="GJU Files" />
+    <meta property="og:description" content="GJU Files" />
+    <meta property="og:image" content="https://gjufiles.com/OpenGraphImage.png" />
   </head>
   <body>
     <div id="root"></div>
