--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="GJU Files" />
-    <meta property="og:description" content="GJU Files" />
+    <meta property="og:description" content="Share and Access Notes & Past Exams" />
     <meta property="og:image" content="https://gjufiles.com/OpenGraphImage.png" />
   </head>
   <body>
