--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:type" content="website" />
+    <meta property="og:image:secure_url" content="https://gjufiles.com/OpenGraphImage.png" />
+    <meta property="og:site_name" content="GJU Files" />
     <meta property="og:title" content="GJU Files" />
     <meta property="og:description" content="Share and Access Notes & Past Exams" />
-    <meta property="og:image" content="https://gjufiles.com/OpenGraphImage.png" />
+    <meta property="og:image" itemprop="image" content="https://gjufiles.com/OpenGraphImage.png" />
   </head>
   <body>
     <div id="root"></div>
