--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image:secure_url" content="https://gjufiles.com/OpenGraphImage.jpg" />
     <meta property="og:site_name" content="GJU Files" />
+    <meta name="twitter:card" content="summary_large_image">
     <meta property="og:title" content="GJU Files" />
     <meta property="og:description" content="Share and Access Notes & Past Exams" />
     <meta property="og:image" itemprop="image" content="https://gjufiles.com/OpenGraphImage.jpg" />
