--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <meta property="og:image" itemprop="image" content="https://gjufiles.com/OpenGraphImage.jpg" />
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
